# limen

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  docs.yml
dev_utils/: run-local-ci.sh
docs/: index.md  quickstart.md  roadmap.md
docs/ADRs/: 003_NO_STD_ALLOC_STD_UNSAFE_DIVISION.md  004_PAYLOAD_FIRST_CONTRACTS.md  013_ZERO_LOCK_CONCURRENT_GRAPHS.md
docs/architecture/: edge.md  graph_flow_no_std.md  index.md  memory_manager.md  message_payload.md
integration-tests/: Cargo.toml  build.rs
integration-tests/tests/: codegen_example_graph.rs
integration-tests/tests/codegen_example_graph/: no_std.rs  std.rs
integration-tests/tests/proc_example_graph/: std.rs
integration-tests/tests/static_example_graph/: no_std.rs  std.rs
limen/: Cargo.toml
limen-build/: Cargo.toml
limen-build/src/: lib.rs
limen-codegen/: Cargo.toml
limen-codegen/src/: ast.rs  builder.rs  gen.rs  lib.rs  parse.rs  validate.rs
limen-core/: Cargo.toml
limen-core/src/: compute.rs  edge.rs  errors.rs  graph.rs  lib.rs  memory.rs  message.rs  node.rs  platform.rs  policy.rs  prelude.rs  queue.rs  runtime.rs  scheduling.rs  telemetry.rs  types.rs
limen-core/src/edge/: bench.rs  link.rs  spsc_array.rs  spsc_concurrent.rs  spsc_priority2.rs  spsc_raw.rs  spsc_ringbuf.rs  spsc_vecdeque.rs
limen-core/src/graph/: bench.rs  builder.rs  descriptor.rs  validate.rs
limen-core/src/memory/: concurrent_manager.rs  heap_manager.rs  static_manager.rs
limen-core/src/message/: batch.rs  payload.rs  tensor.rs
limen-core/src/node/: bench.rs  descriptor.rs  link.rs  model.rs  sink.rs  source.rs
limen-core/src/platform/: linux.rs
limen-core/src/queue/: bench.rs  descriptor.rs  link.rs  spsc_array.rs  spsc_priority2.rs  spsc_raw.rs  spsc_ringbuf.rs  spsc_vecdeque.rs
limen-core/src/runtime/: bench.rs  tests.rs
limen-core/src/telemetry/: event_message.rs  graph_telemetry.rs  sink.rs
limen-devtools/: Cargo.toml
limen-devtools/src/: lib.rs
limen-examples/: Cargo.toml  README.md  build.rs  build.rs.bak
limen-examples/examples/: pipeline_demo.rs
limen-examples/src/: lib.rs  p2_sim_chain.rs
limen-examples/tests/: codegen_nonstd.rs  common.rs  proc_example_graph.rs  proc_nonstd.rs  proc_std.rs
limen-examples/tests/codegen_example_graph/: no_std.rs  std.rs
limen-examples/tests/proc_example_graph/: no_std.rs  std.rs
limen-examples/tests/static_example_graph/: no_std.rs  std.rs
limen-light/: Cargo.toml
limen-light/src/: lib.rs  runtime.rs  util.rs
limen-light/src/graph/: simple_chain.rs
limen-light/src/no_alloc/: runtime_queued.rs
limen-light/src/runtime/: p0.rs  p1.rs
limen-models/: Cargo.toml
limen-models/src/: identity.rs  lib.rs  nodes.rs  tract_backend.rs
limen-output/: Cargo.toml
limen-output/src/: file.rs  gpio_rpi_sink.rs  lib.rs  stdout.rs
limen-platform/: Cargo.toml
limen-platform/src/: lib.rs  linux.rs
limen-processing/: Cargo.toml
limen-processing/src/: identity.rs  lib.rs  logic.rs  math.rs  ops.rs  payload.rs
limen-sensors/: Cargo.toml
limen-sensors/src/: csvio.rs  lib.rs  simulated.rs
limen/src/: builder.rs  config.rs  lib.rs  observability_init.rs  platform.rs  registry.rs
limen/src/graph/: simple_chain.rs
limen/src/runtime/: mod.rs  p2_concurrent.rs  p2_single.rs
limen/src/scheduler/: edf.rs
limen/src/spsc/: priority2.rs
