[workspace]
members = [
    "limen-core",
    "limen-processing",
    "limen-models",
    "limen-sensors",
    "limen-output",
    "limen-platform",
    "limen",
    "limen-light",
    "limen-examples",
    "limen-devtools",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.77"
