[package]
name = "limen-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
alloc = ["limen-core/alloc"]
std = ["limen-core/std"]

[dev-dependencies]
limen-core = { path = "../limen-core", default-features = false }
limen-build = { path = "../limen-build" }

[build-dependencies]
limen-codegen = { path = "../limen-codegen" }

syn = { version = "2", features = ["full", "parsing"] }
