[package]
name = "limen-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core traits, types, and runtime for the Limen edge inference pipeline."

[features]
default = ["std"]
std = []
alloc = []
serde = ["dep:serde"]
tracing = ["dep:tracing"]
metrics = ["dep:metrics"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
tracing = { version = "0.1", optional = true }
metrics = { version = "0.23", optional = true }
