[package]
name = "limen-core"
description = "Core traits, types, errors, and the generic runtime for the Limen edge inference system."
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[features]
default = ["alloc"]
alloc = []
std = ["alloc"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
