[package]
name = "limen-devtools"
description = "Developer tools and utilities for the Limen edge inference runtime."
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[features]
default = ["std"]
std = []
with-limen = ["dep:limen", "dep:limen-core", "dep:serde", "dep:toml"]
with-processing = ["dep:limen-processing"]
with-sensors = ["dep:limen-sensors"]
with-output = ["dep:limen-output"]
with-platform = ["dep:limen-platform"]
with-models = ["dep:limen-models"]
with-tract = []

[dependencies]
limen-core = { path = "../limen-core", default-features = false, optional = true, features = ["std", "serde"] }
limen = { path = "../limen", default-features = false, optional = true, features = ["std", "serde", "toml", "tracing"] }
limen-processing = { path = "../limen-processing", default-features = false, optional = true, features = ["std", "register"] }
limen-sensors = { path = "../limen-sensors", default-features = false, optional = true, features = ["std", "register"] }
limen-output = { path = "../limen-output", default-features = false, optional = true, features = ["std", "register", "stdout", "file"] }
limen-platform = { path = "../limen-platform", default-features = false, optional = true, features = ["std", "register"] }
limen-models = { path = "../limen-models", default-features = false, optional = true, features = ["std", "register", "native-identity"] }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, optional = true, features = ["derive"] }
toml = { workspace = true, optional = true }
