[package]
name = "limen-examples"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "End-to-end examples for Limen (P2 simple chain PoC)."
repository = "https://example.com/limen"

[features]
alloc = ["limen-core/alloc"]
std = ["alloc", "limen-core/std"]

[dependencies]
limen-core = { path = "../limen-core", default-features = false }

