[package]
name = "limen-examples"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "End-to-end examples for Limen."
repository = "https://example.com/limen"

[features]
default = []
alloc = ["limen-core/alloc"]
std = ["alloc", "limen-core/std"]

[dependencies]
# No default features; we’ll control feature combos with cargo-hack.
limen-core = { path = "../limen-core", default-features = false }

# Used in proc-macro tests (integration tests compile as separate crates).
[dev-dependencies]
limen-build = { path = "../limen-build" }

# Build-script codegen for graphs that we want to live in the crate.
[build-dependencies]
limen-codegen = { path = "../limen-codegen" }

syn = { version = "2", features = ["full", "parsing"] }

