[package]
name = "limen-light"
description = "Minimal embedded wrapper around Limen's generic runtime (no_std + alloc friendly)."
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[features]
default = []
alloc = ["limen-core/alloc"]
std = ["limen-core/std", "alloc"]
serde = ["limen-core/serde", "dep:serde"]
no_alloc = ["dep:heapless"]

[dependencies]
limen-core = { path = "../limen-core", default-features = false }

serde = { workspace = true, optional = true, features = ["derive"] }
heapless = { workspace = true, optional = true }
