[package]
name = "limen-light"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "P0/P1 runtimes, and static wiring helpers for Limen (no_std by default)."
repository = "https://example.com/limen" # TODO!

[features]
default = ["p0"]
p0 = []
alloc = ["limen-core/alloc"]
p1 = ["alloc"]
std = ["alloc", "limen-core/std"]

[dependencies]
limen-core = { path = "../limen-core", default-features = false }
