[package]
name = "limen-models"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Backend adapters implementing ComputeBackend and Model for Limen."

[features]
default = ["tract"]
tract = []
onnxruntime = []
tensorrt = []
openvino = []
iree = []
serde = ["dep:serde"]

[dependencies]
limen-core = { path = "../limen-core" }
serde = { version = "1.0", features = ["derive"], optional = true }
