[package]
name = "limen-models"
description = "Model backends for the Limen runtime (native identity backend, Tract ONNX backend)."
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[features]
default = ["alloc", "native-identity"]
alloc = ["limen-core/alloc"]
std = ["limen-core/std", "alloc"]
register = ["dep:limen"]
native-identity = []
backend-tract = ["std", "dep:tract-onnx"]
backend-onnxruntime = [] # reserved for future wiring
serde = ["limen-core/serde", "dep:serde"]

[dependencies]
limen-core = { path = "../limen-core", default-features = false }
limen = { path = "../limen", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
tract-onnx = { version = "0.22", optional = true }
