[package]
name = "limen-models"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Compute backends and model nodes for Limen (identity and Tract POC)."
repository = "https://example.com/limen"

[features]
alloc = ["limen-core/alloc"]
std = ["alloc", "limen-core/std"]

[dependencies]
limen-core = { path = "../limen-core", default-features = false }

