[package]
name = "limen-output"
description = "Output sinks for the Limen runtime (stdout, file, optional MQTT and GPIO)."
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[features]
default = ["alloc"]
alloc = ["limen-core/alloc"]
std = ["limen-core/std", "alloc"]
register = ["dep:limen"]
mqtt-paho = ["std", "dep:paho-mqtt"]
gpio-rpi = ["std", "dep:rppal"]
file = ["std"]
stdout = ["std"]
serde = ["limen-core/serde", "dep:serde"]

[dependencies]
limen-core = { path = "../limen-core", default-features = false }
limen = { path = "../limen", default-features = false, optional = true }

paho-mqtt = { workspace = true, optional = true, features = ["bundled"] }
rppal = { workspace = true, optional = true }

serde = { workspace = true, optional = true, features = ["derive"] }
