[package]
name = "limen-output"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Output SinkNodes for Limen (stdout, file)."
repository = "https://example.com/limen"

[features]
alloc = ["limen-core/alloc"]
std = ["alloc", "limen-core/std"]

[dependencies]
limen-core = { path = "../limen-core", default-features = false }
