[package]
name = "limen-platform"
description = "Platform backends for the Limen runtime (desktop)."
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[features]
default = ["alloc", "std"]
alloc = ["limen-core/alloc"]
std = ["limen-core/std", "alloc"]
register = ["dep:limen"]
serde = ["limen-core/serde", "dep:serde"]
num_cpus = ["dep:num_cpus"]

[dependencies]
limen-core = { path = "../limen-core", default-features = false }
limen = { path = "../limen", default-features = false, optional = true }

serde = { workspace = true, optional = true, features = ["derive"] }
num_cpus = { workspace = true, optional = true }
