[package]
name = "limen-processing"
description = "Preprocessors and postprocessors for the Limen runtime."
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[features]
default = ["alloc"]
alloc = ["limen-core/alloc"]
std = ["limen-core/std", "alloc"]
register = ["dep:limen"]
serde = ["limen-core/serde", "dep:serde"]

[dependencies]
limen-core = { path = "../limen-core", default-features = false }
limen = { path = "../limen", default-features = false, optional = true }

serde = { workspace = true, optional = true, features = ["derive"] }
