[package]
name = "limen-sensors"
description = "Sensor input implementations for the Limen runtime (simulated, CSV, serial, MQTT)."
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[features]
default = ["alloc"]
alloc = ["limen-core/alloc"]
std = ["limen-core/std", "alloc"]
csv = ["std"]
serialport = ["std", "dep:serialport"]
mqtt-paho = ["std", "dep:paho-mqtt"]
register = ["dep:limen"]
serde = ["limen-core/serde", "dep:serde"]

[dependencies]
limen-core = { path = "../limen-core", default-features = false }
limen = { path = "../limen", default-features = false, optional = true }

serialport = { version = "4.2", optional = true }
paho-mqtt = { version = "0.12", optional = true, default-features = true, features = ["bundled"] }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
