[package]
name = "limen-sensors"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Sensor SourceNodes for Limen (simulated, CSV)."
repository = "https://example.com/limen"

[features]
alloc = ["limen-core/alloc"]
std = ["alloc", "limen-core/std"]

[dependencies]
limen-core = { path = "../limen-core", default-features = false }
