[package]
name = "limen"
description = "Dynamic runtime wiring for the Limen edge inference system (config, registries, builder, observability)."
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[features]
default = ["std"]
std = ["limen-core/std", "alloc"]
alloc = ["limen-core/alloc"]
serde = ["dep:serde", "limen-core/serde"]
toml = ["dep:toml", "serde"]
json = ["dep:serde_json", "serde"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
metrics = ["dep:metrics"]

[dependencies]
limen-core = { path = "../limen-core", default-features = false }

serde = { workspace = true, optional = true, features = ["derive"] }
toml = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = ["fmt", "env-filter"] }
metrics = { workspace = true, optional = true }
