[package]
name = "limen"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "P2 runtime (std) for Limen: EDF and throughput schedulers, lock-free SPSC queues, and platform adapters."
repository = "https://example.com/limen" # replace with real repo

[features]

[dependencies]
limen-core = { path = "../limen-core", features = ["std"] }

